first changes round

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     , "passport":"*"
     , "coffee-script":"*"
     , "coffee-trace":"*"
+    , "connect":"*"
     , "connect-flash":"*"
+    , "connect-mongo":"*"
     , "mongoose":"*"
     , "multiparty":"*"
   }
